// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Aampe's upsertUserProfile destination action: all fields 1`] = `
Object {
  "contact_id": "P*Pj!fAL]LSGu",
  "event_id": "P*Pj!fAL]LSGu",
  "event_name": "P*Pj!fAL]LSGu",
  "metadata": Object {
    "testType": "P*Pj!fAL]LSGu",
  },
  "timestamp": 3521102870.074,
  "user_properties": Object {
    "testType": "P*Pj!fAL]LSGu",
  },
}
`;

exports[`Testing snapshot for Aampe's upsertUserProfile destination action: required fields 1`] = `
Object {
  "contact_id": "P*Pj!fAL]LSGu",
  "event_id": "P*Pj!fAL]LSGu",
  "event_name": "P*Pj!fAL]LSGu",
  "timestamp": 3521102870.074,
  "user_properties": Object {
    "testType": "P*Pj!fAL]LSGu",
  },
}
`;
